--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.8",
+    "@tailwindcss/postcss": "^4.0.3",
     "express": "^4.18.2",
+    "postcss": "^8.5.1",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.0.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
